fixed table alignment bug

--- a/css/studdata.css
+++ b/css/studdata.css
@@ -33,7 +33,7 @@
   .tableDisplay {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 88.5%;
     display: flex;
     justify-content: center;
     height: 300px;
